Added the new key in post schema
