# src/models/post.ts
@@ -3,14 +3,15 @@ import mongoose from "mongoose";
 
 const postSchema = new mongoose.Schema({
   post_id: { type: Number, required: true },
+  post_title: { type: String, required: true },
   description: { type: String, required: true },
   user_id: { type: String, required: true, ref: "User" },
-  created_date: {
+  created_at: {
     type: Date,
     default: Date.now,
     immutable: true,
   },
-  updated_date: {
+  updated_at: {
     type: Date,
     default: Date.now,
   },
